# ai-codebase-research

./: .gitignore  LICENSE  README.md  pyproject.toml
reports/: ai-onboarding.md
src/codebase_onboarding/: __init__.py  ai_client.py  analyzers.py  cli.py  models.py  report.py  scanner.py  terminal.py
tests/: test_analysis.py
tests/fixtures/demo_project/: README.md  SKILL.md  main.py  onboarding-test-output.md
tests/fixtures/go_project/: README.md  go.mod
tests/fixtures/go_project/cmd/api/: main.go
tests/fixtures/rust_project/: README.md
tests/fixtures/rust_project/src/: main.rs
