[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-onboarding-agent"
version = "0.1.0"
description = "AI-ready codebase onboarding agent that scans repositories and generates developer onboarding reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Codebase Research" }]
dependencies = ["rich>=13.7"]

[project.scripts]
codebase-onboard = "codebase_onboarding.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
